@@ -16,8 +16,9 @@
 
 SG_BEGIN_DECL()
 
-     typedef void (*void_f_ppvoid_t) (void **);
-     typedef void (*void_f_pvoid_t) (void *);
+typedef void (*void_f_ppvoid_t) (void **);
+typedef void (*void_f_pvoid_t) (void *);
+typedef void (*void_f_int_pvoid_t) (int,void *);
      typedef void *(*pvoid_f_void_t) (void);
      typedef void *(*pvoid_f_pvoid_t) (void *);
      typedef void (*void_f_void_t) (void);
