@@ -77,6 +77,9 @@ SimGrid (3.3.4) unstable; urgency=low
  * Update the start_time and finish_time of tasks on completion/failure
  * Bugfix: Remove task from state swags when destroyed
 
+ XBT:
+ * New function: xbt_dynar_dopar(dynar,fun) to map a function over the
+   dynar with one separate thread per value of the dynar.
    
  Bug fixes:
  * GTNetS wrappers should now be usable again (and betterly tested too)
